[gd_scene load_steps=13 format=3 uid="uid://c3y7c3j4xw4ha"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ahwhj"]
[ext_resource type="PackedScene" uid="uid://drscd8bltk4wv" path="res://scenes/player.tscn" id="2_5efia"]
[ext_resource type="Script" path="res://scripts/viewport_scaler.gd" id="3_6mt8x"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="3_pr0gb"]
[ext_resource type="Script" path="res://scripts/lobby.gd" id="4_yvhqy"]
[ext_resource type="Script" path="res://scripts/server_listener.gd" id="5_db7qn"]
[ext_resource type="PackedScene" uid="uid://dbbor176bs2cu" path="res://scenes/world.tscn" id="5_ib6y1"]
[ext_resource type="Script" path="res://scripts/server_advertiser.gd" id="6_8yafm"]
[ext_resource type="Script" path="res://scripts/ping_label.gd" id="10_k26ov"]
[ext_resource type="Script" path="res://scripts/ping.gd" id="11_si2sl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_be8h2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pd2oc"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0, 0, 0, 1)

[node name="Main" type="Node" node_paths=PackedStringArray("players_node")]
script = ExtResource("1_ahwhj")
player_scene = ExtResource("2_5efia")
players_node = NodePath("Scaler/SubViewportContainer/SubViewport/World/Objects")

[node name="GameManager" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_be8h2")
script = ExtResource("3_pr0gb")

[node name="Scaler" type="Control" parent="." node_paths=PackedStringArray("viewport", "viewport_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_6mt8x")
viewport = NodePath("SubViewportContainer/SubViewport")
viewport_container = NodePath("SubViewportContainer")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Scaler"]
layout_mode = 1
offset_right = 480.0
offset_bottom = 270.0

[node name="SubViewport" type="SubViewport" parent="Scaler/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
physics_object_picking = true
positional_shadow_atlas_size = 0
positional_shadow_atlas_16_bits = false
positional_shadow_atlas_quad_0 = 0
positional_shadow_atlas_quad_1 = 0
positional_shadow_atlas_quad_2 = 0
positional_shadow_atlas_quad_3 = 0
size = Vector2i(480, 270)
render_target_update_mode = 4

[node name="World" parent="Scaler/SubViewportContainer/SubViewport" instance=ExtResource("5_ib6y1")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Lobby" type="PanelContainer" parent="UI" node_paths=PackedStringArray("main", "game", "server_listener", "server_advertiser", "connect_label", "connect_address", "connect_port", "connect_list", "host_address", "host_port", "host_name", "host_broadcast")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pd2oc")
script = ExtResource("4_yvhqy")
main = NodePath("../..")
game = NodePath("../../GameManager")
server_listener = NodePath("ServerListener")
server_advertiser = NodePath("ServerAdvertiser")
connect_label = NodePath("../ConnectLabel")
connect_address = NodePath("VBoxContainer/TabContainer/Connect/VBox/HBoxContainer/ConnectAddress")
connect_port = NodePath("VBoxContainer/TabContainer/Connect/VBox/HBoxContainer/ConnectPort")
connect_list = NodePath("VBoxContainer/TabContainer/Connect/VBox/ConnectList")
host_address = NodePath("VBoxContainer/TabContainer/Host/VBox/Info/HostAddress")
host_port = NodePath("VBoxContainer/TabContainer/Host/VBox/Host/HostPort")
host_name = NodePath("VBoxContainer/TabContainer/Host/VBox/Broadcast/HostName")
host_broadcast = NodePath("VBoxContainer/TabContainer/Host/VBox/Broadcast/HostBroadcast")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Lobby"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Lobby/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="UI/Lobby/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Username:"
vertical_alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="UI/Lobby/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Anonymous"
caret_blink = true
caret_blink_interval = 0.5

[node name="TabContainer" type="TabContainer" parent="UI/Lobby/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Connect" type="MarginContainer" parent="UI/Lobby/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Connect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox"]
layout_mode = 2

[node name="ShowPasswordButton" type="CheckButton" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Show password protected"

[node name="ShowFullButton" type="CheckButton" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Show full"

[node name="Fill" type="Control" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer2"]
layout_mode = 2
text = "Refresh"

[node name="ConnectList" type="ItemList" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
item_count = 1
item_0/text = "Looking for games on your local network..."
item_0/selectable = false
item_0/disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox"]
layout_mode = 2

[node name="ConnectAddress" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Server address..."
caret_blink = true
caret_blink_interval = 0.5

[node name="Label" type="Label" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = ":"
vertical_alignment = 1

[node name="ConnectPort" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "1234"
caret_blink = true
caret_blink_interval = 0.5

[node name="ConnectButton" type="Button" parent="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Host" type="MarginContainer" parent="UI/Lobby/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Host"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Info"]
layout_mode = 2
size_flags_vertical = 1
text = "Your local IP address:"
vertical_alignment = 1

[node name="HostAddress" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Getting your local IP address..."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="HSeparator" type="HSeparator" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
layout_mode = 2

[node name="Broadcast" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 6

[node name="HostBroadcast" type="CheckButton" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Broadcast"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Broadcast on network"

[node name="Label" type="Label" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Broadcast"]
layout_mode = 2
size_flags_vertical = 1
text = "Server name:"
vertical_alignment = 1

[node name="HostName" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Broadcast"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Unnamed server..."
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5

[node name="HSeparator2" type="HSeparator" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
layout_mode = 2

[node name="Player" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Player"]
layout_mode = 2
size_flags_vertical = 1
text = "Player password:"
vertical_alignment = 1

[node name="PlayPwdEdit" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Player"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "No password for players..."
secret = true
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Spectator" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 6

[node name="CheckButton" type="CheckButton" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Spectator"]
layout_mode = 2
text = "Allow spectating"

[node name="Label" type="Label" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Spectator"]
layout_mode = 2
size_flags_vertical = 1
text = "Spectator password:"
vertical_alignment = 1

[node name="SpecPwdEdit" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Spectator"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "No password for spectators..."
secret = true
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Control" type="Control" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Host" type="HBoxContainer" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 6

[node name="PortLabel" type="Label" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Host"]
layout_mode = 2
size_flags_vertical = 1
text = "Port #:"
vertical_alignment = 1

[node name="HostPort" type="LineEdit" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Host"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "1234"
max_length = 5
caret_blink = true
caret_blink_interval = 0.5

[node name="HostButton" type="Button" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Host"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host & Spectate"

[node name="HostAndPlayButton" type="Button" parent="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Host"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host & Play"

[node name="ServerListener" type="Node" parent="UI/Lobby"]
script = ExtResource("5_db7qn")

[node name="ServerAdvertiser" type="Node" parent="UI/Lobby"]
script = ExtResource("6_8yafm")

[node name="PingLabel" type="Label" parent="UI"]
offset_left = 6.0
offset_top = 6.0
offset_right = 46.0
offset_bottom = 29.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
script = ExtResource("10_k26ov")

[node name="ConnectLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -13.0
offset_right = 50.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Connecting..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ping" type="Timer" parent="."]
autostart = true
script = ExtResource("11_si2sl")

[connection signal="pressed" from="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer2/RefreshButton" to="UI/Lobby" method="clear_connect_list"]
[connection signal="item_activated" from="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/ConnectList" to="UI/Lobby" method="_on_connect_list_item_activated"]
[connection signal="item_selected" from="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/ConnectList" to="UI/Lobby" method="_on_connect_list_item_selected"]
[connection signal="pressed" from="UI/Lobby/VBoxContainer/TabContainer/Connect/VBox/HBoxContainer/ConnectButton" to="UI/Lobby" method="_btn_connect"]
[connection signal="pressed" from="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Host/HostButton" to="UI/Lobby" method="_btn_host" binds= [false]]
[connection signal="pressed" from="UI/Lobby/VBoxContainer/TabContainer/Host/VBox/Host/HostAndPlayButton" to="UI/Lobby" method="_btn_host" binds= [true]]
[connection signal="error" from="UI/Lobby/ServerListener" to="UI/Lobby" method="_on_server_listener_error"]
[connection signal="new_server" from="UI/Lobby/ServerListener" to="UI/Lobby" method="_on_server_listener_new_server"]
[connection signal="timeout" from="Ping" to="Ping" method="_on_timeout"]

[editable path="Scaler/SubViewportContainer/SubViewport/World"]
